# Lancet2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  _config.yml  download_test_data.sh  extractor_bench.cpp  index.html  index.md  main.cpp.in  mkdocs.yml  pixi.toml  publications.html  reference.html  sitemap.xml  test_config.h.inc  version.h.in  versions.json
.chglog/: CHANGELOG.tpl.md  config.yml
.claude/: cost-model.md  protected_paths.txt  settings.json  settings.local.json.example
.claude/agent-memory/: README.md  sanitizer-expert.md
.claude/agents/: README.md  fresh-reviewer.md  probe-interpreter.md  sanitizer-expert.md
.claude/commands/: README.md  arch-decision-record.md  audit-bundle.md  brainstorm.md  check.md  commit.md  e2e-pipeline-test.md  execute-spec.md  fix-and-validate.md  investigate.md  probe-concordance.md  probe-run.md  spec.md  wrap-branch.md
.claude/hooks/: README.md  block_protected_paths.py  pre_commit_gate.sh  stop_reminder.sh  validate_cpp_identifiers.py  validate_naming.py
.claude/rules/: base.md  cli.md
.claude/scripts/: e2e_pipeline_test.sh
.claude/skills/: README.md
.claude/ui/: statusline.sh
.codex/: hooks.json
.codex/agents/: assembly-and-calling-expert.toml  fresh-reviewer.toml  perf-analyst.toml  probe-interpreter.toml  sanitizer-expert.toml  (+1 more)
2.8.7/: 404.html  index.html  publications.html  reference.html  sitemap.xml
_layouts/: template.html
benchmark/: CMakeLists.txt
benchmarks/: CMakeLists.txt  align_bench.cc  benchmark_config.h.inc  extractor_bench.cpp  hamming_bench.cpp  main.cc  main.cpp  repeat_bench.cpp
benchmarks/results/: extractor_bench.AMD_Milan_results.json
blog/: atom.xml  index.html  rss.xml
cbdg/: kmer_test.cpp
cmake/: build_minimap2.sh  configure_gperftools.sh  configure_htslib.sh  configure_lzma.sh  coverage.cmake  cpu_family.cmake  defaults.cmake  dependencies.cmake  sanitizer-blacklist.txt  sanitizers.cmake  version.cmake  warnings.cmake
conda/: recipe.yaml
data/: download_test_data.sh
dev/: 404.html  index.html  publications.html  reference.html
docker/: asan.Dockerfile  clang.Dockerfile  cpp-env-ubuntu.Dockerfile  gcc.Dockerfile  msan.Dockerfile  tsan.Dockerfile  ubsan.Dockerfile
docs/: STYLE_GUIDE.md  explanation.md  guides.md  index.md  page1.md  page2.md  page3.md  page4.md  publications.md  reference.md  tutorials.md
docs_dev/: ai_bundle_overview.md
guides/: custom_visualization.html  scoring_somatic_variants.html  targeted_analysis.html  wgs_analysis.html
hts/: extractor_test.cpp  reference_test.cpp
intro/: index.html
lancet/: main.cpp.inc
latest/: 404.html  PROBE_TRACKING.html  PROFILING.html  STYLE_GUIDE.html  index.html  publications.html  reference.html  sitemap.xml
markdown-page/: index.html
python/: Dockerfile  conda_env.yml  filter_variants.py  pyproject.toml  score_variants.py  somatic_ebm.lancet_6ef7ba445a.v1.pkl  somatic_ebm.lancet_6ef7ba445a.v1.pkl.REMOVED.git-id
results/: extractor_bench.Intel_Icelake_results.json
scripts/: build_conda_local.sh  build_push_image.sh  bump_version.py  bump_version.sh  configure_gperftools.sh  configure_htslib.sh  export_docs.py  gen_walk_palette.py  prep_stm_viz.sh  run_clang_format.py  run_clang_tidy.py  update_changelog.sh
search/: search_index.js  search_index.json
singularity/: Singularity.asan  Singularity.clang  Singularity.gcc  Singularity.msan  Singularity.tsan  Singularity.ubsan
src/: align.cc  align.cpp  barcode_set.cc  barcode_set.cpp  base_hpcov.cc  base_hpcov.cpp  base_label.cc  base_label.cpp  bgzf_ostream.cc  bgzf_streambuf.cc  canonical_kmers.cc  canonical_kmers.cpp  cigar.cc  cigar.cpp  cli.cc  cli.cpp  cli_params.cc  cli_params.cpp  core_enums.cc  core_enums.cpp  cov_stats.cc  cov_stats.cpp  dot_serializer.cc  dot_serializer.cpp  edge.cc  edge.cpp  edmond_karp.cc  edmond_karp.cpp  fasta_reader.cc  fasta_reader.cpp  fisher_exact.cc  fisher_exact.cpp  gfa_serializer.cc  graph.cc  graph.cpp  graph_builder.cc  graph_builder.cpp  hts_alignment.cc  hts_alignment.cpp  hts_reader.cc  (+46 more)
tests/: CMakeLists.txt  align_test.cc  align_test.cpp  cigar_unit_test.cc  fasta_reader_test.cc  fractional_sampler_test.cc  genomic_region_test.cc  hts_alignment_test.cc  hts_reader_test.cc  lancet2_test.cc  lancet_test.cpp  node_label_test.cc  online_stats_test.cc  read_extractor_test.cc  test_config.h.in  test_config.h.inc  window_builder_test.cc
tests/base/: analyze_lcr_scores.cpp  analyze_longdust_scores.cpp  assert_test.cpp  compute_stats_test.cpp  crash_handler_test.cpp  eta_timer_test.cpp  gzip_ostream_test.cpp  hash_test.cpp  lcr_scorer_test.cpp  longdust_scorer_test.cpp  longdust_test_helpers.h  mann_whitney_test.cpp  memory_test.cpp  polar_coords_test.cpp  repeat.cpp  repeat_test.cpp  rev_comp_test.cpp  score_region_lcr.cpp  score_region_longdust.cpp  sequence_complexity_test.cpp  sliding_test.cpp  tar_gz_test_helpers.h  tar_gz_writer_test.cpp  timer_test.cpp  version_test.cpp
tests/caller/: variant_set_test.cpp  variant_support_metrics_test.cpp
tests/cbdg/: graph_complexity_test.cpp  graph_test.cpp  kmer_test.cpp  sample_mask_test.cpp
tests/core/: tar_gz_shard_merger_test.cpp
tests/data/: example.bed  human_g1k_v37.1_1_90000000.fa.gz.REMOVED.git-id  human_g1k_v37.1_1_90000000.fa.gz.fai  human_g1k_v37.1_1_90000000.fa.gz.gzi  human_g1k_v37.no_mutations.1_82960000_82970000.bam  human_g1k_v37.no_mutations.1_82960000_82970000.bam.bai  normal.bam  normal.bam.REMOVED.git-id  normal.bam.bai  normal.cram  normal.cram.crai  tumor.bam  tumor.bam.REMOVED.git-id  tumor.bam.bai  tumor.cram  tumor.cram.REMOVED.git-id  tumor.cram.crai
tests/data/base/: longdust_calibration_test_regions.tsv  mann_whitney_scipy_ref.tsv
tests/hts/: alignment_test.cpp  cigar_utils_test.cpp  extractor_test.cpp  reference_test.cpp
tests/scripts/: gen_mann_whitney_scipy_ref.py
tests/tools/: analyze_longdust_scores.cpp
website/: docusaurus.config.js  package-lock.json  package-lock.json.REMOVED.git-id  package.json  sidebars.js
(+623 files in other folders)
