[project]
name = "lancet_filter_variants"
version = "1.0.0"
description = "Filter and score Lancet2 variants"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
keywords = ["lancet", "lancet2", "machine-learning", "variant-filtering"]
authors = [{ name = "Rajeeva Musunuri", email = "rmusunuri@nygenome.org" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["interpret", "tqdm", "pysam"]

[project.urls]
"Homepage" = "https://nygenome.github.io/Lancet2/"
"Bug Reports" = "https://github.com/nygenome/Lancet2/issues"
"Source" = "https://github.com/nygenome/Lancet2"

[tool.black]
line-length = 120
